recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:1: error: Missing closing brace `}' assumed here
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
^Spiral:1: error: expected class or object definition
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
^