recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if steps ==0{
    break()}
  else {
    forward(length)
    left(angle)
    spiral(steps-1,angle,length+3,increment)
  }